syntax = "proto2";

// Header used to indicate the size of the following protobuf message.
// As we cannot give information about the size of this message, only constant
// size types should be used here.
message MessageSize {
    required fixed32 bytes = 1; // Message size in bytes
}

